refactor: logic moved to userUseCase